--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,68 @@
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
                         <version>4.0.0.4121</version>
-                    </dependency>
 
+                    </dependency>
+                    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+                    <dependency>
+                        <groupId>org.seleniumhq.selenium</groupId>
+                        <artifactId>selenium-java</artifactId>
+                        <version>4.25.0</version>
+                    </dependency>
+                    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+                    <dependency>
+                        <groupId>org.testng</groupId>
+                        <artifactId>testng</artifactId>
+                        <version>7.10.2</version>
+                        <scope>test</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                        <version>1.7.5</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-simple</artifactId>
+                        <version>1.6.4</version>
+                    </dependency>
                 </dependencies>
+
+
                 <properties>
                     <maven.compiler.source>11</maven.compiler.source>
                     <maven.compiler.target>11</maven.compiler.target>
                     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                    <sonar.host.url>http://localhost:9000</sonar.host.url>
+                    <sonar.login>sqp_f9e5acca91febfaaacf63f76ffb5144806a06971</sonar.login>
                 </properties>
+    <build>
+        <plugins>
+            <!-- JaCoCo Plugin -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version> <!-- Versión reciente -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
+
+
+    </build>
 
 
 
