--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,17 @@
                         <artifactId>slf4j-simple</artifactId>
                         <version>1.6.4</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-utils</artifactId>
+                        <version>3.4.1</version> <!-- O la última versión estable -->
+                    </dependency>
                 </dependencies>
 
 
                 <properties>
-                    <maven.compiler.source>11</maven.compiler.source>
-                    <maven.compiler.target>11</maven.compiler.target>
+                    <maven.compiler.source>17</maven.compiler.source>
+                    <maven.compiler.target>17</maven.compiler.target>
                     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                     <sonar.host.url>http://localhost:9000</sonar.host.url>
                     <sonar.login>sqp_f9e5acca91febfaaacf63f76ffb5144806a06971</sonar.login>
