--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,13 @@ agent any
                     steps{
                     bat "mvn package"}
                 }
+        stage ("Consolidate Results"){
+                    steps{
+                    input("Do you want to capture results?")
+                    junit '**/target/surefire-reports/TEST.*.xml'
+                    archive 'target/*.jar'
+                    }
+                }
 
     }
 }
