--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,8 @@ agent any
         stage ("Consolidate Results"){
                     steps{
                     input("Do you want to capture results?")
-                    junit '**/target/surefire-reports/TEST.*.xml'
+                    junit '**/target/surefire-reports/TEST*.xml'
+
                     archive 'target/*.jar'
                     }
                 }
